--- a/block.html
+++ b/block.html
@@ -24,9 +24,45 @@
             <div class="blue-menu"></div>
             <div class="yellow-menu"></div>
             <div class="clear"></div>
-
         </div>
-
+        <div class="left-block">
+            <h5 class="left-text">Left block</h5>
+            <div class="left">
+                <h5 class="text-left-box">left</h5>
+                <div class="a-left">
+                    <h5 class="text-a-left">a-left</h5>
+                </div>
+                <div class="b-left">
+                    <h5 class="text-b-left">b-left</h5>
+                </div>
+            </div>
+        </div>
+        <div class="center-block">
+            <h5 class="center-block-text">Center block</h5>
+            <div class="center-left"></div>
+            <div class="ac-center">
+                <h5 class="a-center">a-center</h5>
+                <div class="a-c">
+                    <h5 class="a-c-text">A-c</h5>
+                </div>
+                <div class="b-c">
+                    <h5 class="a-c-text">B-c</h5>
+                </div>
+            </div>
+            <div class="center-right"></div>
+        </div>
+        <div class="right-block">
+            <h5 class="right-text">Right block</h5>
+            <div class="right-a"></div>
+            <div class="right-b"></div>
+            <div class="right-c">
+                <h5 class="text-right">text</h5>
+                <h5 class="text-left">text</h5>
+            </div>
+        </div>
+        <footer >
+            <h5 class="footer">Footer</h5>
+        </footer>
     </div>
 </body>
 </html>
