--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -6,6 +6,9 @@
     <title>Title</title>
 </head>
 <body>
+<!--
 <script src="lesson1.js"></script>
+-->
+<script src="lesson2.js"></script>
 </body>
 </html>
