--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,6 +9,9 @@
 <!--
 <script src="lesson1.js"></script>
 -->
+<!--
 <script src="lesson2.js"></script>
+-->
+<script src="lesson4.js"></script>
 </body>
 </html>
