--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -12,6 +12,7 @@
 <!--
 <script src="lesson2.js"></script>
 -->
-<script src="lesson4.js"></script>
+<!--<script src="lesson4.js"></script>-->
+<script src="lesson5.js"></script>
 </body>
 </html>
