--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -13,6 +13,7 @@
 <script src="lesson2.js"></script>
 -->
 <!--<script src="lesson4.js"></script>-->
-<script src="lesson5.js"></script>
+<!--<script src="lesson5.js"></script>-->
+<script src="lesson7.js"></script>
 </body>
 </html>
