--- a/JavaScript/rules2.html
+++ b/JavaScript/rules2.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,10 +13,21 @@
     }
     #wrap2 {
         height: 100px;
-        width: 100px;
+        width: 150px;
         background: red;
+        display: flex;
+    }
+    #wrap2-1{
+        height: 400px;
+        width: 400px;
+        background: black;
     }
 </style>
+<form action="" id="form" name="myForm2">
+    <input type="text" value="" name="someText">
+
+    <input type="submit" value="Підтвердити" name="submit">
+</form>
 <div id="content"></div>
 <h1>Правила бойцовского клуба</h1>
 <div id="wrap">
@@ -25,41 +35,36 @@
         <h2>Первое правило Бойцовского клуба.</h2>
         <p>Никому не рассказывать о Бойцовском клубе.</p>
     </div>
-    <div class="rules rule2" id="wrap2">
-    </div>
-    <div class="rules rule3" id="wrap3">
-        <h2>Третье правило Бойцовского клуба.</h2>
-        <p>В схватке участвуют только двое.</p>
-    </div>
-    <div class="rules rule4" id="wrap4">
-        <h2>Четвертое правило Бойцовского клуба.</h2>
-        <p>Не более одного поединка за один раз.</p>
-    </div>
+    <div class="rules rule2" id="wrap2"></div>
+    <div id="wrap2-1"></div>
+    <!--  <div class="rules rule3" id="wrap3">
+          <h2>Третье правило Бойцовского клуба.</h2>
+          <p>В схватке участвуют только двое.</p>
+      </div>
+      <div class="rules rule4" id="wrap4">
+          <h2>Четвертое правило Бойцовского клуба.</h2>
+          <p>Не более одного поединка за один раз.</p>
+      </div>
 
-    <div class="rules rule5" id="wrap5">
-        <h2>Пятое правило Бойцовского клуба.</h2>
-        <p>Бойцы сражаются без обуви и голые по пояс.</p>
-    </div>
-    <div class="rules rule6" id="wrap6">
-        <h2>Шестое правило Бойцовского клуба.</h2>
-        <p>Поединок продолжается столько, сколько потребуется.</p>
-    </div>
-    <div class="rules rule7" id="wrap7">
-        <h2>Седьмое правило Бойцовского клуба.</h2>
-        <p>Если противник потерял сознание или делает вид, что потерял, или говорит «Хватит» — поединок
-            окончен.</p>
-    </div>
-    <div class="rules rule8" id="wrap8">
-        <h2>Восьмое и последнее правило Бойцовского клуба.</h2>
-        <p>Новичок обязан принять бой.</p>
-    </div>
-    <from action="" id="form" name="myForm">
-        <input type="text" value="" name="someText">
-        <input type="submit" value="OK" name="submit">
-    </from>
+      <div class="rules rule5" id="wrap5">
+          <h2>Пятое правило Бойцовского клуба.</h2>
+          <p>Бойцы сражаются без обуви и голые по пояс.</p>
+      </div>
+      <div class="rules rule6" id="wrap6">
+          <h2>Шестое правило Бойцовского клуба.</h2>
+          <p>Поединок продолжается столько, сколько потребуется.</p>
+      </div>
+      <div class="rules rule7" id="wrap7">
+          <h2>Седьмое правило Бойцовского клуба.</h2>
+          <p>Если противник потерял сознание или делает вид, что потерял, или говорит «Хватит» — поединок
+              окончен.</p>
+      </div>
+      <div class="rules rule8" id="wrap8">
+          <h2>Восьмое и последнее правило Бойцовского клуба.</h2>
+          <p>Новичок обязан принять бой.</p>
+      </div>-->
 </div>
 <script src="lesson8.js">
 </script>
 </body>
 </html>
--->
