--- a/JavaScript/rules2.html
+++ b/JavaScript/rules2.html
@@ -11,7 +11,7 @@
         width: auto;
         background: aqua;
     }
-    #wrap2 {
+/*    #wrap2 {
         height: 100px;
         width: 150px;
         background: red;
@@ -21,13 +21,19 @@
         height: 400px;
         width: 400px;
         background: black;
-    }
+    }*/
 </style>
-<form action="" id="form" name="myForm2">
-    <input type="text" value="" name="someText">
 
-    <input type="submit" value="Підтвердити" name="submit">
+<form action="" id="form" name="myForm2">
+    <input type="text" value="" name="someText1">
+    <input type="text" value="" name="someText2">
 </form>
+
+<form action="" id="form1" name="myForm21">
+    <input type="text" value="" name="someText3">
+    <input type="text" value="" name="someText4">
+</form>
+
 <div id="content"></div>
 <h1>Правила бойцовского клуба</h1>
 <div id="wrap">
