--- a/JavaScript/rules2.html
+++ b/JavaScript/rules2.html
@@ -27,12 +27,13 @@
 <form action="" id="form" name="myForm2">
     <input type="text" value="" name="someText1">
     <input type="text" value="" name="someText2">
+    <input type="text" value="" name="someText3">
 </form>
 
-<form action="" id="form1" name="myForm21">
+<!--<form action="" id="form1" name="myForm21">
     <input type="text" value="" name="someText3">
     <input type="text" value="" name="someText4">
-</form>
+</form>-->
 
 <div id="content"></div>
 <h1>Правила бойцовского клуба</h1>
