--- a/JavaScript/rules3.html
+++ b/JavaScript/rules3.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<script src="lesson9.js">
+<!--<script src="lesson9.js">
+</script>-->
+<script src="lesson10.js">
 </script>
 </body>
 </html>
